feat: Mejoras completas en UI/UX de MagicSmartKids